// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not match a ship if all goals are at capacity 1`] = `
Array [
  Object {
    "goalIndex": 0,
    "shipIds": Array [
      0,
    ],
  },
  Object {
    "goalIndex": 1,
    "shipIds": Array [
      1,
    ],
  },
]
`;

exports[`does not match a ship the has value zero everywhere 1`] = `
Array [
  Object {
    "goalIndex": 0,
    "shipIds": Array [
      0,
    ],
  },
  Object {
    "goalIndex": 1,
    "shipIds": Array [],
  },
]
`;

exports[`matches a ship to another goal to avoid exceeding maxShips 1`] = `
Array [
  Object {
    "goalIndex": 0,
    "shipIds": Array [
      2,
    ],
  },
  Object {
    "goalIndex": 1,
    "shipIds": Array [],
  },
  Object {
    "goalIndex": 2,
    "shipIds": Array [
      0,
      1,
    ],
  },
]
`;

exports[`matches up the ships with their highest-value goals 1`] = `
Array [
  Object {
    "goalIndex": 0,
    "shipIds": Array [
      1,
    ],
  },
  Object {
    "goalIndex": 1,
    "shipIds": Array [
      2,
    ],
  },
  Object {
    "goalIndex": 2,
    "shipIds": Array [
      0,
      3,
    ],
  },
]
`;
